# test_action

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py.bak
.github/workflows/: publish_on_release.yml  test.yml  ubuntu_test.yml
docs/: quick_start.md
my_package/: __init__.py  __main__.py
my_package/color_logger/: test_logger_in_my.py
my_package/html/: test_rst.rst
my_package/html/assets/: test_txt.txt
requirements/: extra.txt
test/: test_colorama.py  test_error.py  test_logger.py  test_pytest.py  test_pytest2.py  test_raise.py
tests/: test_colorama.py  test_logger.py
